load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@centsideas//packages/jest:jest.bzl", "ts_jest")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@microk8s_deploy//:defaults.bzl", "microk8s_deploy")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//packages/dependency-injection",
        "//packages/enums",
        "//packages/environment",
        "//packages/event-sourcing",
        "//packages/models",
        "//packages/rpc",
        "//packages/schemas",
        "//packages/types",
        "//packages/utils",
        "@npm//@types/node",
        "@npm//@types/sanitize-html",
        "@npm//inversify",
        "@npm//sanitize-html",
    ],
)

nodejs_image(
    name = "image",
    data = [":lib"],
    entry_point = ":index.ts",
)

k8s_deploy(
    name = "k8s",
    images = {"idea:placeholder_name": ":image"},
    template = ":idea.yaml",
)

microk8s_deploy(
    name = "microk8s",
    images = {"idea:placeholder_name": ":image"},
    template = ":idea.yaml",
)

ts_jest(
    name = "test",
    srcs = glob(["**/*.spec.ts"]),
    data = ["//packages/rpc:proto_files"],
    test_lib = "lib",
    tsconfig = "//:tsconfig.json",
    deps = [
        "//packages/dependency-injection",
        "//packages/enums",
        "//packages/environment",
        "//packages/event-sourcing",
        "//packages/rpc",
        "//packages/testing",
        "//packages/types",
    ],
)
