load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@cents_ideas//:jest.bzl", "jest_test")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("//:config.bzl", "CONTAINER_REGISTRY")

package(default_visibility = ["//visibility:public"])

lib_deps = [
    "//packages/enums:lib",
    "//packages/models:lib",
    "//packages/utils:lib",
    "//packages/event-sourcing:lib",
    "@npm//body-parser",
    "@npm//express",
    "@npm//inversify",
    "@npm//reflect-metadata",
    "@npm//shortid",
    "@npm//module-alias",
    "@npm//@types/body-parser",
    "@npm//@types/express",
    "@npm//@types/jest",
]

ts_library(
    name = "lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = lib_deps,
)

nodejs_image(
    name = "image",
    data = [
        ":lib",
        "//:package.json",
    ],
    entry_point = ":index.ts",
)

lib_deps.insert(0, ":lib")

ts_library(
    name = "test_lib",
    srcs = glob(include = ["**/*.spec.ts"]),
    tsconfig = "//:tsconfig.jest.json",
    deps = lib_deps,
)

filegroup(
    name = "test_lib.js",
    srcs = [":test_lib"],
    output_group = "es5_sources",
)

jest_test(
    name = "test",
    srcs = [":test_lib.js"],
    jest_config = "//:jest.config.js",
    deps = [":lib"],
)

k8s_deploy(
    name = "k8s",
    images = {
        CONTAINER_REGISTRY + "/ideas:latest": ":image",
    },
    template = ":ideas.yaml",
)
