load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@microk8s_deploy//:defaults.bzl", "microk8s_deploy")
load("@centsideas//packages/jest:jest.bzl", "ts_jest")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//packages/config",
        "//packages/dependency-injection",
        "//packages/enums",
        "//packages/event-sourcing",
        "//packages/models",
        "//packages/rpc",
        "//packages/schemas",
        "//packages/types",
        "//packages/utils",
        "@npm//@sendgrid/mail",
        "@npm//@types/node",
        "@npm//inversify",
        "@npm//reflect-metadata",
    ],
)

pkg_npm(
    name = "pkg",
    package_name = "centsideas/services/mailing",
    deps = [":lib"],
)

nodejs_image(
    name = "image",
    data = [
        ":lib",
        "//packages/schemas:proto_authentication",
        "//packages/schemas:proto_user",
    ],
    entry_point = ":index.ts",
)

ts_jest(
    name = "test",
    srcs = glob(["**/*.spec.ts"]),
    data = [":pkg"],
    test_lib = "lib",
    tsconfig = "//:tsconfig.json",
)

k8s_deploy(
    name = "mailing",
    images = {"mailing:placeholder_name": ":image"},
    template = ":mailing.yaml",
)

k8s_deploy(
    name = "config",
    template = ":mailing-config.yaml",
)

k8s_objects(
    name = "k8s",
    objects = [
        ":mailing",
        ":config",
    ],
)

microk8s_deploy(
    name = "microk8s_mailing",
    images = {"mailing:placeholder_name": ":image"},
    template = ":mailing.yaml",
)

microk8s_deploy(
    name = "microk8s_config",
    template = ":mailing-config.yaml",
)

k8s_objects(
    name = "microk8s",
    objects = [
        ":microk8s_mailing",
        ":microk8s_config",
    ],
)
