load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
# load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
# load("@cents_ideas//:jest.bzl", "jest_test")

package(default_visibility = ["//visibility:public"])

lib_deps = [
    "//:register-aliases.js",
    "//packages/enums",
    "//packages/event-sourcing",
    "//packages/models",
    "//packages/utils",
    "@npm//@types/body-parser",
    "@npm//@types/express",
    "@npm//body-parser",
    "@npm//inversify",
]

ts_library(
    name = "lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = lib_deps,
)

nodejs_image(
    name = "image",
    data = [":lib"],
    entry_point = ":index.ts",
)

# k8s_deploy(
#     name = "k8s",
#     images = {"notifications:placeholder_name": ":image"},
#     template = ":notifications.yaml",
# )
