load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@microk8s_deploy//:defaults.bzl", "microk8s_deploy")
load("@centsideas//packages/jest:jest.bzl", "ts_jest")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//packages/dependency-injection",
        "//packages/enums",
        "//packages/environment",
        "//packages/event-sourcing",
        "//packages/models",
        "//packages/rpc",
        "//packages/utils",
        "@npm//@sendgrid/mail",
        "@npm//@types/node",
        "@npm//@types/web-push",
        "@npm//inversify",
        "@npm//web-push",
    ],
)

nodejs_image(
    name = "image",
    data = [
        ":lib",
        "//packages/rpc:proto_files",
    ],
    entry_point = ":index.ts",
)

k8s_deploy(
    name = "k8s",
    images = {"notifications:placeholder_name": ":image"},
    template = ":notifications.yaml",
)

microk8s_deploy(
    name = "microk8s",
    images = {"notifications:placeholder_name": ":image"},
    template = ":notifications.yaml",
)

ts_jest(
    name = "test",
    srcs = glob(include = ["**/*.spec.ts"]),
    test_lib = "lib",
    tsconfig = "//:tsconfig.json",
)
