load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//packages/enums:lib",
        "//packages/event-sourcing:lib",
        "//packages/models:lib",
        "//packages/utils:lib",
        "@npm//@types/body-parser",
        "@npm//@types/express",
        "@npm//body-parser",
        "@npm//express",
        "@npm//inversify",
        "@npm//reflect-metadata",
        "@npm//shortid",
    ],
)

nodejs_image(
    name = "image",
    data = [
        ":lib",
        "//:package.json",
    ],
    entry_point = ":index.ts",
)

k8s_deploy(
    name = "k8s",
    images = {
        "gcr.io/centsideas/reviews:latest": ":image",
    },
    template = ":reviews.yaml",
)
