load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@centsideas//packages/jest:jest.bzl", "ts_jest")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//packages/config",
        "//packages/dependency-injection",
        "//packages/enums",
        "//packages/event-sourcing",
        "//packages/models",
        "//packages/rpc",
        "//packages/schemas",
        "//packages/types",
        "//packages/utils",
        "@npm//@elastic/elasticsearch",
        "@npm//@types/node",
        "@npm//inversify",
    ],
)

nodejs_image(
    name = "image",
    data = [
        ":lib",
        "//packages/schemas:proto_common",
        "//packages/schemas:proto_search",
    ],
    entry_point = ":index.ts",
)

ts_jest(
    name = "test",
    srcs = glob(["**/*.spec.ts"]),
    test_lib = "lib",
    tsconfig = "//:tsconfig.json",
)
