load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@centsideas//packages/jest:jest.bzl", "ts_jest")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@microk8s_deploy//:defaults.bzl", "microk8s_deploy")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//packages/config",
        "//packages/dependency-injection",
        "//packages/enums",
        "//packages/event-sourcing",
        "//packages/models",
        "//packages/rpc",
        "//packages/schemas",
        "//packages/types",
        "//packages/utils",
        "@npm//@elastic/elasticsearch",
        "@npm//@types/async-retry",
        "@npm//@types/node",
        "@npm//async-retry",
        "@npm//inversify",
    ],
)

pkg_npm(
    name = "pkg",
    package_name = "centsideas/services/search",
    deps = [":lib"],
)

nodejs_image(
    name = "image",
    data = [
        ":lib",
        "//packages/schemas:proto_common",
        "//packages/schemas:proto_idea",
        "//packages/schemas:proto_search",
    ],
    entry_point = ":index.ts",
)

ts_jest(
    name = "test",
    srcs = glob(["**/*.spec.ts"]),
    data = [":pkg"],
    test_lib = "lib",
    tsconfig = "//:tsconfig.json",
)

k8s_deploy(
    name = "search",
    images = {"search:placeholder_name": ":image"},
    template = ":search.yaml",
)

k8s_deploy(
    name = "config",
    template = ":search-config.yaml",
)

k8s_objects(
    name = "k8s",
    objects = [
        ":config",
        ":search",
    ],
)

microk8s_deploy(
    name = "microk8s_search",
    images = {"search:placeholder_name": ":image"},
    template = ":search.yaml",
)

microk8s_deploy(
    name = "microk8s_config",
    template = ":search-config.yaml",
)

k8s_objects(
    name = "microk8s",
    objects = [
        ":microk8s_config",
        ":microk8s_search",
    ],
)
