load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

package(default_visibility = ["//visibility:public"])

lib_deps = [
    "//:register-aliases.js",
    "//packages/enums:lib",
    "//packages/event-sourcing:lib",
    "//packages/models:lib",
    "//packages/utils:lib",
    "@npm//@types/body-parser",
    "@npm//@types/express",
    "@npm//@types/faker",
    "@npm//@types/jsonwebtoken",
    "@npm//@types/mongodb",
    "@npm//body-parser",
    "@npm//express",
    "@npm//faker",
    "@npm//inversify",
    "@npm//jsonwebtoken",
    "@npm//mongodb",
    "@npm//reflect-metadata",
    "@npm//shortid",
]

ts_library(
    name = "lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = lib_deps,
)

nodejs_image(
    name = "image",
    data = [":lib"],
    entry_point = ":index.ts",
)

k8s_deploy(
    name = "k8s",
    images = {
        "users:placeholder_name": ":image",
    },
    template = ":users.yaml",
)
