load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

ts_library(
    name = "base",
    srcs = [
        "app.component.ts",
        "app-base.module.ts",
    ],
    tsconfig = "//services/admin-client:tsconfig.json",
    use_angular_plugin = True,
    deps = [
        "//services/admin-client/environment",
        "@npm//@angular/common",
        "@npm//@angular/compiler-cli",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//ngx-socket-io",
    ],
)

ts_library(
    name = "dev",
    srcs = ["app-dev.module.ts"],
    tsconfig = "//services/admin-client:tsconfig.json",
    use_angular_plugin = True,
    deps = [
        ":base",
        "@npm//@angular/compiler-cli",
        "@npm//@angular/core",
    ],
)

ts_library(
    name = "prod",
    srcs = ["app-prod.module.ts"],
    tsconfig = "//services/admin-client:tsconfig.json",
    use_angular_plugin = True,
    deps = [
        ":base",
        "@npm//@angular/common",
        "@npm//@angular/compiler-cli",
        "@npm//@angular/core",
    ],
)
