load("//packages/angular-bazel:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//services/admin-client:__subpackages__"])

ng_ts_library(
    name = "base",
    srcs = [
        "app.component.ts",
        "app-base.module.ts",
    ],
    tsconfig = "//services/admin-client:tsconfig.json",
    deps = [
        "//services/admin-client/environment",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//ngx-socket-io",
    ],
)

ng_ts_library(
    name = "dev",
    srcs = ["app-dev.module.ts"],
    tsconfig = "//services/admin-client:tsconfig.json",
    deps = [
        ":base",
        "@npm//@angular/core",
    ],
)

ng_ts_library(
    name = "prod",
    srcs = ["app-prod.module.ts"],
    tsconfig = "//services/admin-client:tsconfig.json",
    deps = [
        ":base",
        "@npm//@angular/common",
        "@npm//@angular/core",
    ],
)
